2008-02-15  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: write cheader_filename for
	  namespace methods

	* vapi/: regenerated bindings, fixes bug 514350

2008-02-15  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala,
	  gobject/valaccodegenerator.vala: generate casts for property
	  assignments where necessary, fixes bug 511732

2008-02-15  Jürg Billeter  <j@bitron.ch>

	* vala/valamethod.vala, vala/valasemanticanalyzer.vala,
	  gobject/valaccodegenerator.vala: fix memory management of
	  parameters with ownership transfer, fixes bug 511642

2008-02-14  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: avoid testing floating point
	  numbers for equality, fixes bug 516259

2008-02-12  Jürg Billeter  <j@bitron.ch>

	* vala/valanamespace.vala: visit error domains, fixes bug 515828

2008-02-12  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-2.0/: fix gdk_window_get_origin binding
	* vapi/packages/gtk+-2.0/: fix gtk_spin_button_get_range binding

	* vapi/gdk-2.0.vapi, vapi/gtk+-2.0.vapi: regenerated

2008-02-12  Jürg Billeter  <j@bitron.ch>

	* vala/valaelementaccess.vala: fix crash when using prefix
	  increment in element access expression, fixes bug 515733

2008-02-12  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: fix using instance methods as
	  delegates in the constructor

2008-02-12  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala: support signal handlers
	  with struct parameters

2008-02-09  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorinterface.vala: support GType
	  properties, patch by Ali Sabil

2008-02-09  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: remove static modifier from GSourceFunc
	  binding

2008-02-08  Jürg Billeter  <j@bitron.ch>

	* vala/valaattributeprocessor.vala, gobject/valaccodegenerator.vala:
	  support delegates with array and struct parameters,
	  fixes bug 515202
